fix spacings and minor stuff. LOOKS FUCKIN SICK

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,9 +35,10 @@ ul#links{
 }
 
 h1#yes{
-  font-size: 10em;
-  margin-left: 30%;
+  font-size: 11em;
+  margin-left: 25%;
   margin-top: 55%;
+  font-family: 'Gloria Hallelujah', cursive;
 }
 
 #buttons{
@@ -67,14 +68,15 @@ div#vic{
   padding-right: 0;
 }
 
-#vic,#buttons,#yes{
-  /*display: none;*/
+#vic,#buttons,#yes, .type-wrap{
+  display: none;
 }
 
 #victor{
   margin-top:20%;
   margin-left:-25%;
 }
+
 
 
 /*TYPED CURSOR BLINK CSS*/
